--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <div id="root"></div>
     <script src="js/projects.js"></script>
+    <script src="js/info.js"></script>
     <script src="js/view.js"></script>
     <script src="js/controller.js"></script>
 </body>
