Rename some missing names

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The hipster criollo</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="source/favicon.png">
+    <link rel="icon" type="image/png" href="source/Page_Rsc/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,900|Nanum+Gothic:400,700,800" rel="stylesheet">
 </head>
 
