--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1920, initial-scale=1">
+    <meta name="viewport" content="width=device-tWidth, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The hipster criollo</title>
     <link rel="stylesheet" href="style.css">
